--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=61e5391996a4850019cacba8&product=inline-share-buttons" async="async"></script>
     <div class="sharethis-inline-share-buttons"></div>
     <!-- ShareThis BEGIN --><div class="sharethis-inline-reaction-buttons"></div><!-- ShareThis END -->
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=61e6629596a4850019cacbea&product=inline-reaction-buttons" async="async"></script>
 </head>
 <body>
     <img src="quizbg.jpg" alt="img" id="img" class="img">
