--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <!-- css file link -->
     <link rel="stylesheet" href="quiz.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=61e5391996a4850019cacba8&product=inline-share-buttons" async="async"></script>
-    <div class="sharethis-inline-share-buttons"></div>
-  
-</head>
+<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=61e66276aa3f60001954c254&product=inline-reaction-buttons' async='async'></script>
+  </head>
 <body>
     <img src="quizbg.jpg" alt="img" id="img" class="img">
     <h1 id="title">Quiz by Shrey</h1>
