--- a/index.html
+++ b/index.html
@@ -54,5 +54,8 @@
 
     <!-- javascript file source -->
     <script src="quiz.js"></script>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-61e53e53ef83afbf"></script>
+
 </body>
 </html>
