--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" src="html2canvas.min.js"></script>
     <script type="text/javascript" src="canvas2image.js"></script>
+        <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=61f665cc96a4850019cace86&product=inline-reaction-buttons" async="async"></script>
+    <div class="sharethis-inline-reaction-buttons"></div>
 </head>
 <body>
     <img src="quizbg.jpg" alt="img" id="img" class="img">
