--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <script type="text/javascript" src="canvas2image.js"></script>
         <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=61f665cc96a4850019cace86&product=inline-reaction-buttons" async="async"></script>
     <div class="sharethis-inline-reaction-buttons"></div>
+    <!-- AddToAny BEGIN -->
+<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+<a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+<a class="a2a_button_facebook"></a>
+<a class="a2a_button_twitter"></a>
+<a class="a2a_button_email"></a>
+<a class="a2a_button_whatsapp"></a>
+</div>
+<script async src="https://static.addtoany.com/menu/page.js"></script>
+<!-- AddToAny END -->
 </head>
 <body>
     <img src="quizbg.jpg" alt="img" id="img" class="img">
